--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
                     android:id="@+id/uname1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_username"
+                    android:hint="username"
                     android:inputType="textAutoComplete"
                     android:padding="20dp" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -77,7 +77,7 @@
                     android:id="@+id/pass3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_password"
+                    android:hint="password"
                     android:inputType="textPassword"
                     android:padding="20dp" />
 
@@ -90,9 +90,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="44dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/login"
+                android:text="LOGIN"
                 android:textColor="@color/white"
-                app:backgroundTint="@color/colorPrimaryDark"
+                app:backgroundTint="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/edit_password" />
 
