--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -18,10 +18,11 @@
         android:text="Write Post"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_margin="15dp"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         app:layout_constraintTop_toBottomOf="@id/editPost">
 
         <!--recycler view for displaying
@@ -41,5 +42,19 @@
             android:visibility="visible" />
 
     </RelativeLayout>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="@color/black"
+        android:contentDescription="@string/app_name"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/logout"
+        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
