--- a/app/src/main/res/layout/facebook_feed_rv_item.xml
+++ b/app/src/main/res/layout/facebook_feed_rv_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -62,20 +61,16 @@
                 android:id="@+id/editButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/edit"
-                android:visibility="visible"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:src="@drawable/edit16"
+                android:visibility="visible" />
 
 
             <ImageButton
                 android:id="@+id/delButton"
                 android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:minWidth="48dp"
-                android:minHeight="48dp"
-                android:src="@drawable/delete"
-                android:visibility="visible"
-                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+                android:layout_height="wrap_content"
+                android:src="@drawable/delete16"
+                android:visibility="visible" />
 
         </LinearLayout>
 
@@ -106,10 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/idTVDescription"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
+            android:layout_margin="5dp"
             android:orientation="horizontal"
             android:padding="2dp"
             android:weightSum="3">
