--- a/app/src/main/res/layout/facebook_feed_rv_item.xml
+++ b/app/src/main/res/layout/facebook_feed_rv_item.xml
@@ -116,11 +116,12 @@
                 android:weightSum="2">
 
                 <ImageView
+                    android:id="@+id/imgLikes"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
 
+                    android:layout_weight="1"
                     android:src="@drawable/ic_like" />
 
                 <TextView
