--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
             android:id="@+id/fullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
+            android:hint="Name"
             android:inputType="textEmailAddress"
             android:padding="20dp" />
 
@@ -50,7 +50,7 @@
             android:id="@+id/uname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="User Name"
+            android:hint="username"
             android:inputType="text"
             android:padding="20dp" />
 
@@ -71,7 +71,7 @@
             android:id="@+id/pass1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="password"
             android:inputType="textPassword|textVisiblePassword"
             android:padding="20dp" />
 
@@ -92,7 +92,7 @@
             android:id="@+id/pass2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Confirm Password"
+            android:hint="confirm password"
             android:inputType="textPassword|textVisiblePassword"
             android:padding="20dp" />
 
@@ -148,7 +148,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="REGISTER"
+        android:text="Register"
         android:textColor="@color/white"
         app:backgroundTint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -161,7 +161,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dip"
-        android:text="Go to LOGIN"
+        android:text="Go to login"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
