--- a/app/src/main/res/layout/activity_single_joke.xml
+++ b/app/src/main/res/layout/activity_single_joke.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/homr"
     android:orientation="vertical"
     tools:context=".SingleJoke">
 
@@ -27,8 +28,8 @@
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
         android:textColor="@color/black"
-        android:textSize="32dp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
     <Button
         android:id="@+id/btnNextJoke"
