--- a/app/src/main/res/layout/activity_wall.xml
+++ b/app/src/main/res/layout/activity_wall.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wall"
     tools:context=".WallActivity">
 
     <Button
@@ -18,19 +19,21 @@
         android:text="Write Post"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        app:layout_constraintTop_toBottomOf="@id/editPost">
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/editPost"
+        tools:layout_editor_absoluteX="-73dp">
 
         <!--recycler view for displaying
             our Facebook posts-->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/idRVInstaFeeds"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="359dp"
+            android:layout_height="723dp" />
 
         <!--progressbar for displaying
             our loading indicator-->
@@ -42,7 +45,6 @@
             android:visibility="visible" />
 
     </RelativeLayout>
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/logout"
